--- a/fashion/index.html
+++ b/fashion/index.html
@@ -38,39 +38,39 @@
 </head>
 <body>
 	<header class="top_header">
-		<div class="header_topline">
-			<div class="container">
-				<div class="col-md-12">
-					<div class="row">
-						<div class="phone_namber">
-							<a href="#"><i class="fa fa-mobile" aria-hidden="true"></i> +375 29 344 46 00</a>
-						</div>
+	<div class="main_mnu_top clearfix ">
+		<div class="container ">
+			<div class="col-md-12">
+				<div class="row">
+						<nav class="maian_mnu">
+							<button class="main_mnu_button hidden-md hidden-lg"><i class="fa fa-bars" aria-hidden="true"></i></button>
+							<ul>
+								<li class="active"><a href="#">Главная</a></li>
+								<li><a href="#services" rel="m_PageScroll2id">Услуги</a></li>
+								<li><a href="#portfolio" rel="m_PageScroll2id">Портфолио</a></li>
+								<li><a href="#contacts" rel="m_PageScroll2id">Контакты</a></li>
+							</ul>
+						</nav>
 						<div class="soc_buttons">
 							<a href="#"><i class="fa fa-vk" aria-hidden="true"></i></a>
 							<a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
 							<a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
 						</div>
-					</div>
 				</div>
 			</div>
 		</div>
-		<div class="container">
+	</div>
+		<div class="container ">
 			<div class="col-md-12">
 				<div class="row">
 					<a href="#" class="logo">Евгения Аниканова</a>
-					<!-- Adaptive menu design -->
-					<nav class="maian_mnu clearfix">
-						<button class="main_mnu_button hidden-md hidden-lg"><i class="fa fa-bars" aria-hidden="true"></i></button>
-						<ul>
-							<li class="active"><a href="#">Главная</a></li>
-							<li><a href="#services" rel="m_PageScroll2id">Услуги</a></li>
-							<li><a href="#portfolio" rel="m_PageScroll2id">Портфолио</a></li>
-							<li><a href="#contacts" rel="m_PageScroll2id">Контакты</a></li>
-						</ul>
-					</nav>
 					<h1>Студия красоты</h1>
-				</div>
-			</div> 
+					<h2 class="subtitle">Лучший образ для самых требовательных</h2>
+					<div class="phone_namber">
+							<a href="#"><i class="fa fa-mobile" aria-hidden="true"></i> +375 29 344 46 00</a>
+					</div>
+				</div> 
+			</div>
 		</div>
 	</header>
 	<section class="order">
@@ -310,70 +310,7 @@
 			</div>
 		</div>
 	</section>
-	<section class="main_content">
-		<div class="container">
-			<div class="col-md-8">
-				<div class="content_text">
-					<div class="blog_item">
-						<div class="row">
-							<div class="col-md-12">
-								<h3><a href="#">Заголовок статьи</a></h3>
-							</div>
-							<div class="col-md-4">
-								<img src="img/ds.jpg" alt="picture">
-							</div>
-							<div class="col-md-8">
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque delectus ad perspiciatis ullam consequatur neque repellendus debitis corporis. Voluptatum tenetur soluta nisi cum suscipit in beatae id eligendi blanditiis ipsum!</p>
-							</div>
-						</div>
-					</div>
-					<div class="blog_item">
-						<div class="row">
-							<div class="col-md-12">
-								<h3><a href="#">Заголовок статьи</a></h3>
-							</div>
-							<div class="col-md-4">
-								<img src="img/ds.jpg" alt="picture">
-							</div>
-							<div class="col-md-8">
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque delectus ad perspiciatis ullam consequatur neque repellendus debitis corporis. Voluptatum tenetur soluta nisi cum suscipit in beatae id eligendi blanditiis ipsum!</p>
-							</div>
-						</div>
-					</div>
-					<div class="blog_item">
-						<div class="row">
-							<div class="col-md-12">
-								<h3><a href="#">Заголовок статьи</a></h3>
-							</div>
-							<div class="col-md-4">
-								<img src="img/ds.jpg" alt="picture">
-							</div>
-							<div class="col-md-8">
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque delectus ad perspiciatis ullam consequatur neque repellendus debitis corporis. Voluptatum tenetur soluta nisi cum suscipit in beatae id eligendi blanditiis ipsum!</p>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="col-md-4">
-				<aside class="right_aside">
-					<ul>
-					<li><a href="">Lorem ipsum dolor sit.</a></li>
-					<li><a href="">Lorem ipsum dolor sit.</a></li>
-					<li><a href="">Lorem ipsum dolor sit.</a></li>
-					<li><a href="">Lorem ipsum dolor sit.</a></li>
-					<li><a href="">Lorem ipsum dolor sit.</a></li>
-					<li><a href="">Lorem ipsum dolor sit.</a></li>
-					<li><a href="">Lorem ipsum dolor sit.</a></li>
-					<li><a href="">Lorem ipsum dolor sit.</a></li>
-					<li><a href="">Lorem ipsum dolor sit.</a></li>
-					<li><a href="">Lorem ipsum dolor sit.</a></li>
-					<li><a href="">Lorem ipsum dolor sit.</a></li>
-					</ul>
-				</aside>
-			</div>
-		</div>
-	</section>
+	
 	<div class="hidden">
 		<form id="callback" class="pop_form">
 			<h3>Заказать обратный звонок</h3>
@@ -383,17 +320,14 @@
 		</form>
 	</div>
 	<footer>
-		<div class="header_topline">
+		<div class="footer_bottom_line">
 			<div class="container">
 				<div class="col-md-12">
 					<div class="row">
-						<button class="auth_buttons hidden-md hidden-lg hidden-sm"><i class="fa fa-user" aria-hidden="true"></i></button>
-						<div class="top_links">
-							<a href="#">Вход</a> \
-							<a href="#">Регистрация
-							</a>
+						<div class="footer_phone_namber">
+							<a href="#"><i class="fa fa-mobile" aria-hidden="true"></i> +375 29 344 46 00</a>
 						</div>
-						<div class="soc_buttons">
+						<div class="footer_soc_buttons">
 							<a href="#"><i class="fa fa-vk" aria-hidden="true"></i></a>
 							<a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
 							<a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
