--- a/index.html
+++ b/index.html
@@ -296,10 +296,10 @@
 			</div>
 		</div>
 	</div>
-	<section id="contacts" class="form_section">
+	<section class="form_section">
 		<div class="form">
 			<div>
-				<h2 class="form_name">Оставить заявку</h2>
+				<h2 class="form_name" id="contacts">Оставить заявку</h2>
 				<form action="" method="post">
 					<input type="text" name="name" placeholder="Имя" required="" />
 					<input type="tel" name="phone" placeholder="Телефон" required="" />
@@ -325,7 +325,7 @@
 				<div class="col-md-12">
 					<div class="row">
 						<div class="footer_phone_namber">
-							<a href="#"><i class="fa fa-mobile" aria-hidden="true"></i> +375 29 344 46 000</a>
+							<a href="#"><i class="fa fa-mobile" aria-hidden="true"></i> +375 29 344 46 00</a>
 						</div>
 						<div class="footer_soc_buttons">
 							<a href="#"><i class="fa fa-vk" aria-hidden="true"></i></a>
